--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ const artists = {
 "Intermission(LOT-III)": "Jishnu, G.R.Adhavh",
 "Saavachuruven unna(LOT-III)": "Jishnu, G.R.Adhavh, Sanjai",
 "Sivagasi's Daaha(LOT-III)": "G.R.Adhavh, Shreyas",
-"Sivagasi's Dahaa x Saavachuruven unna(LOT-III)": "G.R.Adhavh, Shreyas",
+"Sivagasi's Dahaa x Saavachuruven unna(LOT-III)": "G.R.Adhavh, Shreyas, Jishnu",
 "The namechange(LOT-III)": "Kavinraaj, G.R.Adhavh",
 "Flute anthem(LOT-III)": "G.R.Adhavh",
 "Item number 1(LOT-III)": "G.R.Adhavh",
@@ -933,3 +933,4 @@ return min + ":" + sec;
 </script>
 </body>
 </html>
+
