--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ const playlists = {
 list1: [
 "Anugundu Abhishek(LOT-III).mp3", "DSK on the move(LOT-III).mp3", "Hyper Harishankar(LOT-III).mp3",
 "Intermission(LOT-III).mp3", "Jishnu Anthem Reprise(LOT-III).mp3", "The fight(LOT-III).mp3",
-"King in the universe(LOT-III).mp3", "King vs Harold(LOT-III).mp3", "LOT-III teaser concert(LOT-III).mp3",
+"King in the universe(LOT-III).mp3", "King vs Harold(LOT-III).mp3", "LOT-III teaser concert.mp3",
 "LOT-III Theme(LOT-III).mp3", "Saavachuruven unna(LOT-III).mp3", "Sivagasi's Daaha(LOT-III).mp3",
 "Sivagasi's Dahaa x Saavachuruven unna(LOT-III).mp3",
 "The namechange(LOT-III).mp3", "Vadakku Sadhuram il Jishnu(LOT-III).mp3", "Flute anthem.mp3"
@@ -743,6 +743,7 @@ if(clean === "Bomb") displayName = "Bomb (Endhu 1cm)";
 if(clean === "Sanjai") displayName = "Sanjai's room (Endhu 1cm)";
 if(clean === "Flute anthem") displayName = "Flute anthem(LOT-III)";
 if(clean === "Jishnu Anthem Thalapathy Vijay vocal") displayName = "Jishnu Anthem Thalapathy Vijay Vocal";
+if(clean === "LOT-III teaser concert") displayName = "LOT-III teaser concert(LOT-III)";
 
 let artist = getArtist(displayName) || getArtist(clean);
 
@@ -937,5 +938,6 @@ return min + ":" + sec;
 </script>
 </body>
 </html>
+
 
 
