--- a/index.html
+++ b/index.html
@@ -737,13 +737,17 @@ let listElem = document.getElementById(id);
 
 playlists[id].forEach((song, idx)=>{
 let clean = song.replace(".mp3","");
+// Corrected block around line 734
 let displayName = clean;
 if(clean === "Harishankar ku irukka") displayName = "Harishankar ku irukka?";
 if(clean === "Bomb") displayName = "Bomb (Endhu 1cm)";
 if(clean === "Sanjai") displayName = "Sanjai's room (Endhu 1cm)";
 if(clean === "Flute anthem") displayName = "Flute anthem(LOT-III)";
 if(clean === "Jishnu Anthem Thalapathy Vijay vocal") displayName = "Jishnu Anthem Thalapathy Vijay Vocal";
+// 🆕 ADDED MAPPING FOR TEASER CONCERT
 if(clean === "LOT-III teaser concert") displayName = "LOT-III teaser concert(LOT-III)";
+
+// 🆕 Increment view will now work for ALL songs played
 
 let artist = getArtist(displayName) || getArtist(clean);
 
@@ -811,15 +815,17 @@ currentIndex = index;
 let song = playlists[list][index];
 let clean = song.replace(".mp3","");
 
+// Inside function playSong(list, index) - Around line 734
 let displayName = clean;
 if(clean === "Harishankar ku irukka") displayName = "Harishankar ku irukka?";
 if(clean === "Bomb") displayName = "Bomb (Endhu 1cm)";
 if(clean === "Sanjai") displayName = "Sanjai's room (Endhu 1cm)";
 if(clean === "Flute anthem") displayName = "Flute anthem(LOT-III)";
 if(clean === "Jishnu Anthem Thalapathy Vijay vocal") displayName = "Jishnu Anthem Thalapathy Vijay Vocal";
+if(clean === "LOT-III teaser concert") displayName = "LOT-III teaser concert(LOT-III)";
 
 // 🆕 Increment view will now work for ALL songs played
-incrementView(displayName); 
+incrementView(displayName);
 
 let artist = getArtist(displayName) || getArtist(clean);
 let color = getColor(displayName) || getColor(clean);
@@ -938,6 +944,7 @@ return min + ":" + sec;
 </script>
 </body>
 </html>
+
 
 
 
