--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@ letter-spacing: 1px;
 
 /* CONTENT PADDING */
 /* Padded to accommodate the fixed player bar at the bottom */
+/* Update this block in your <style> tag */
 .content { 
-    /* Add padding to the top to push content down slightly */
     padding-top: 20px; 
-    padding-bottom: 160px; 
+    padding-bottom: 250px; /* Increased this to push content above the player */
 }
 
 /* PLAYLIST BOX */
@@ -1130,6 +1130,7 @@ return min + ":" + sec;
 </script>
 </body>
 </html>
+
 
 
 
