--- a/index.html
+++ b/index.html
@@ -639,11 +639,8 @@ margin-top: 3px;
 
     // Set Target: Jan 21st of this year
 
-    const targetDate = new Date(`Jan 21, ${currentYear} 00:00:00`).getTime();
-
-    // Set Expiry: Jan 22nd of this year (when it disappears)
-
-    const expiryDate = new Date(`Jan 22, ${currentYear} 00:00:00`).getTime();
+    const targetDate = new Date(`Jan 21, 2026 00:00:00`).getTime();
+const expiryDate = new Date(`Jan 22, 2026 00:00:00`).getTime();
 
     
 
@@ -1249,6 +1246,7 @@ return min + ":" + sec;
 </script>
 </body>
 </html>
+
 
 
 
